--- a/client/mean-chat/src/app/contacts-list/contacts-list.component.css
+++ b/client/mean-chat/src/app/contacts-list/contacts-list.component.css
@@ -1,9 +1,17 @@
-.chat-list {
-  height: 70vh;
+.contacts-list {
+  height: 55vh;
   overflow-y: scroll;
 }
 
-.chat-list-item {
+.contacts-list li {
+  margin: 10px 0;
+}
+
+.contacts-list-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 5px;
@@ -12,16 +20,4 @@
   margin-bottom: 10px;
   cursor: pointer;
   transition: background-color 0.3s;
-}
-
-.chat-list-item:hover {
-  background-color: #f2f2f2;
-}
-
-.participant-names {
-  display: flex;
-}
-
-.participant-names span {
-  margin-right: 5px;
 }
