--- a/client/mean-chat/src/app/create-group-chat-form/create-group-chat-form.component.css
+++ b/client/mean-chat/src/app/create-group-chat-form/create-group-chat-form.component.css
@@ -28,6 +28,8 @@
 .participants-list {
   list-style-type: none;
   padding: 0;
+  height: 45vh;
+  overflow-y: scroll;
 }
 
 .participants-list li {
