--- a/client/mean-chat/src/app/new-contact-form/new-contact-form.component.css
+++ b/client/mean-chat/src/app/new-contact-form/new-contact-form.component.css
@@ -1,3 +1,12 @@
-.new-contact-input {
-  margin-right: 10px;
+.found-users {
+  height: 50vh;
+  overflow-y: scroll;
+}
+
+.found-user-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 5px;
 }
