--- a/client/mean-chat/src/app/create-group-chat-form/create-group-chat-form.component.html
+++ b/client/mean-chat/src/app/create-group-chat-form/create-group-chat-form.component.html
@@ -33,7 +33,7 @@
         class="action-button danger-button"
         (click)="removeFromGroupChat(contact._id)"
       >
-        Remove from Chat
+        Remove
       </button>
     </li>
   </ul>
