a bunch of refactoring to account for more data in chatroom participants array, and some filtering in new contact form

--- a/client/mean-chat/src/app/chat/chat.component.css
+++ b/client/mean-chat/src/app/chat/chat.component.css
@@ -9,8 +9,9 @@
 }
 
 .participants-container {
+  max-height: 15vh;
   overflow-wrap: normal;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .participant-item {
@@ -86,7 +87,7 @@
   flex-direction: column-reverse;
   justify-content: flex-start;
   height: 55vh;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .chat-input-container {
