--- a/client/mean-chat/src/app/chat/chat.component.html
+++ b/client/mean-chat/src/app/chat/chat.component.html
@@ -7,10 +7,10 @@
           *ngFor="let participant of participants; let last = last"
           class="participant-item"
         >
-          {{ participant.name }}
+          {{ participant.user.name }}
           <button
-            *ngIf="!activeChat.admins.includes(participant._id)"
-            (click)="promoteToAdmin(participant._id)"
+            *ngIf="!activeChat.admins.includes(participant.user._id)"
+            (click)="promoteToAdmin(participant.user._id)"
             class="action-button"
           >
             Promote
@@ -21,12 +21,12 @@
     </div>
 
     <div *ngIf="!this.promoteMembers">
-      <h3>
+      <h3 class="participants-container">
         <ng-container *ngFor="let participant of participants; let last = last">
-          {{ participant.name }}
+          {{ participant.user.name }}
           <button
-            *ngIf="!participant.inUserContacts"
-            (click)="addToContacts(participant.email)"
+            *ngIf="!participant.user.inUserContacts"
+            (click)="addToContacts(participant.user.email)"
             title="Add to Contacts"
           >
             +
@@ -96,7 +96,7 @@
         <div class="message-content">{{ message.text }}</div>
       </div>
       <div *ngIf="message.sender._id === currentUser._id" class="user-message">
-        <div class="message-sender">{{ message.sender.name }}:</div>
+        <div class="message-sender">{{ message.sender.user.name }}:</div>
         <div class="message-content">{{ message.text }}</div>
       </div>
     </div>
