--- a/client/mean-chat/src/app/create-group-chat-form/create-group-chat-form.component.css
+++ b/client/mean-chat/src/app/create-group-chat-form/create-group-chat-form.component.css
@@ -29,7 +29,7 @@
   list-style-type: none;
   padding: 0;
   height: 45vh;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .participants-list li {
