mass refactoring. created interfaces and replaced multiple :any instances with proper types

--- a/client/mean-chat/src/app/display-chat-list/display-chat-list.component.html
+++ b/client/mean-chat/src/app/display-chat-list/display-chat-list.component.html
@@ -1,6 +1,6 @@
 <div class="chat-list">
   <div
-    *ngFor="let chatroom of currentUser.chatrooms; let last = last"
+    *ngFor="let chatroom of currentUser.chatrooms"
     (click)="setActiveChat(chatroom)"
   >
     <div *ngIf="chatroom.name" class="chat-list-item">
