implement unread messages marker in chat-list

--- a/client/mean-chat/src/app/display-chat-list/display-chat-list.component.html
+++ b/client/mean-chat/src/app/display-chat-list/display-chat-list.component.html
@@ -6,7 +6,10 @@
         (click)="setActiveChat(chatroom)"
       >
         <div *ngIf="chatroom.name" class="chat-list-item">
-          {{ chatroom.name }}
+          <div class="chat-list-item-name">
+            {{ chatroom.name }}
+          </div>
+          <div *ngIf="unreadMessages(chatroom)" class="unread-messages">Unread Messages</div>
         </div>
 
         <div *ngIf="!chatroom.name" class="chat-list-item">
@@ -23,6 +26,7 @@
               </span>
             </span>
           </div>
+          <div *ngIf="unreadMessages(chatroom)" class="unread-messages">Unread Messages</div>
         </div>
       </div>
     </div>
