--- a/client/mean-chat/src/app/chat/chat.component.html
+++ b/client/mean-chat/src/app/chat/chat.component.html
@@ -26,7 +26,7 @@
           {{ participant.user.name }}
           <button
             *ngIf="!inUserContacts(participant.user._id)"
-            (click)="addToContacts(participant.user.email)"
+            (click)="addNewContact(participant.user.email)"
             title="Add to Contacts"
           >
             +
