replace unread message text with icon

--- a/client/mean-chat/src/app/components/chat/chat.component.html
+++ b/client/mean-chat/src/app/components/chat/chat.component.html
@@ -119,6 +119,6 @@
   </div>
 </div>
 
-<div class="chat-container" *ngIf="!activeChat">
+<div class="no-chat-container" *ngIf="!activeChat">
   <div class="no-chat-selected">No chat selected</div>
 </div>
