--- a/client/mean-chat/src/styles.css
+++ b/client/mean-chat/src/styles.css
@@ -81,3 +81,6 @@ label {
   display: block;
   margin-bottom: 5px;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
