--- a/client/mean-chat/src/app/components/chat/chat.component.css
+++ b/client/mean-chat/src/app/components/chat/chat.component.css
@@ -102,3 +102,21 @@
   margin: 5px 0px;
   font-family: "Open Sans", sans-serif;
 }
+
+.no-chat-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 45vw;
+  max-height: 80vh;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+
+.no-chat-selected {
+  display: flex;
+  justify-content: center;
+}
