--- a/client/mean-chat/src/app/components/chat/chat.component.html
+++ b/client/mean-chat/src/app/components/chat/chat.component.html
@@ -35,7 +35,7 @@
         </ng-container>
       </h3>
     </div>
-    <div class="chat-buttons">
+    <div *ngIf="showChatControlButton()" class="chat-buttons">
       <button
         class="action-button settings-button"
         (click)="toggleChatControls()"
