--- a/client/mean-chat/src/app/components/chat/chat.component.html
+++ b/client/mean-chat/src/app/components/chat/chat.component.html
@@ -73,9 +73,7 @@
           Leave Chat
         </button>
         <button
-          *ngIf="
-            activeChat.admins && inActiveChatAdmins(currentUser._id)
-          "
+          *ngIf="activeChat.admins && inActiveChatAdmins(currentUser._id)"
           (click)="deleteChatRoom(activeChat._id)"
           class="action-button danger-button"
         >
@@ -88,20 +86,21 @@
   <!-- list of chat messages -->
   <div class="chat-messages">
     <div class="message-container" *ngFor="let message of messages">
-      <div
-        *ngIf="!sentByUser(message)"
-        class="participant-message"
-      >
-        <div class="message-sender">{{ getMessageSenderName(message.sender) }}:</div>
+      <div *ngIf="!sentByUser(message)" class="participant-message">
+        <div class="message-sender">
+          {{ getMessageSenderName(message.sender) }}:
+        </div>
         <div class="message-content">{{ message.text }}</div>
       </div>
       <div *ngIf="sentByUser(message)" class="user-message">
-        <div class="message-sender">{{ getMessageSenderName(message.sender) }}:</div>
+        <div class="message-sender">
+          {{ getMessageSenderName(message.sender) }}:
+        </div>
         <div class="message-content">{{ message.text }}</div>
       </div>
     </div>
     <div *ngIf="messages.length === 0" class="no-messages">
-      Send a message to get started
+      <div class="no-message-text">Send a message to get started</div>
     </div>
   </div>
 
