--- a/client/mean-chat/src/app/components/contacts-list/contacts-list.component.html
+++ b/client/mean-chat/src/app/components/contacts-list/contacts-list.component.html
@@ -1,14 +1,21 @@
 <div class="contacts-list">
-  <div *ngFor="let contact of contacts">
+  <mat-card *ngFor="let contact of contacts">
     <div class="contacts-list-item">
       <div class="contact-name">
         {{ contact.name }}
       </div>
       <div class="contact-buttons">
-        <button class="action-button create-button" (click)="openChat(contact)">
+        <button
+          mat-raised-button
+          color="primary"
+          class="action-button create-button"
+          (click)="openChat(contact)"
+        >
           Chat
         </button>
         <button
+          mat-raised-button
+          color="primary"
           class="action-button danger-button"
           (click)="deleteContact(contact._id)"
         >
@@ -16,5 +23,5 @@
         </button>
       </div>
     </div>
-  </div>
+  </mat-card>
 </div>
