--- a/client/mean-chat/src/app/components/contacts/contacts.component.html
+++ b/client/mean-chat/src/app/components/contacts/contacts.component.html
@@ -1,9 +1,9 @@
-<div class="side-section-container">
+<mat-card class="side-section-container">
   <h2>Contacts</h2>
-  <button *ngIf="!newContactForm" (click)="toggleNewContactForm()" class="action-button">
+  <button mat-raised-button color="primary" *ngIf="!newContactForm" (click)="toggleNewContactForm()" class="add-new-contact-button">
     Add New Contact
   </button>
-  <button *ngIf="newContactForm" (click)="toggleNewContactForm()" class="action-button">Back</button>
+  <button mat-raised-button color="primary" *ngIf="newContactForm" (click)="toggleNewContactForm()" class="action-button">Back</button>
   <app-new-contact-form *ngIf="newContactForm" [toggleNewContactForm]="toggleNewContactForm"></app-new-contact-form>
   <app-contacts-list *ngIf="!newContactForm"></app-contacts-list>
-</div>
+</mat-card>
