--- a/client/mean-chat/src/app/components/home/home.component.html
+++ b/client/mean-chat/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="home-container">
   <div class="home-top">
-    <button class="btn btn-logout" (click)="logout()">Logout</button>
+    <button mat-raised-button color="accent" class="btn btn-logout" (click)="logout()">Logout</button>
   </div>
   <div class="main-container">
     <app-chat-list></app-chat-list>
