--- a/client/mean-chat/src/app/components/new-contact-form/new-contact-form.component.html
+++ b/client/mean-chat/src/app/components/new-contact-form/new-contact-form.component.html
@@ -7,13 +7,12 @@
     <input type="text" formControlName="query" placeholder="Search users..." />
   </form>
   <div class="found-users">
-    <div *ngFor="let user of foundUsersList">
-      <div *ngIf="!userInContacts(user) && !userIsCurrentUser(user)" class="found-user-item">
-        <div class="found-user-name">
-          {{ user.name }}
-        </div>
-      </div>
-      <button (click)="addNewContact(user.email)" class="action-button">
+    <div *ngFor="let user of foundUsersList" class="found-user-item">
+      <!-- <div *ngIf="!userInContacts(user) && !userIsCurrentUser(user)" class="found-user-item"> -->
+
+      <div class="found-user-name">{{ user.name }}</div>
+
+      <button mat-raised-button color="primary" (click)="addNewContact(user.email)">
         Add Contact
       </button>
     </div>
