--- a/client/mean-chat/src/app/components/contacts-list/contacts-list.component.css
+++ b/client/mean-chat/src/app/components/contacts-list/contacts-list.component.css
@@ -1,6 +1,7 @@
 .contacts-list {
   height: 65vh;
   overflow-y: auto;
+  padding-right: 5px;
 }
 
 .contacts-list li {
@@ -12,7 +13,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  background-color: #fff;
+  background-color: #c0c0c0;
   border: 1px solid #ddd;
   border-radius: 5px;
   padding: 10px;
