--- a/client/mean-chat/src/app/components/display-chat-list/display-chat-list.component.css
+++ b/client/mean-chat/src/app/components/display-chat-list/display-chat-list.component.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background-color: #fff;
+  background-color: #c0c0c0;
   border: 1px solid #ddd;
   border-radius: 5px;
   padding: 10px;
