--- a/client/mean-chat/src/app/components/new-contact-form/new-contact-form.component.css
+++ b/client/mean-chat/src/app/components/new-contact-form/new-contact-form.component.css
@@ -8,5 +8,8 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin: 5px;
+  margin-bottom: 5px;
+  background-color: #c0c0c0;
+  padding: 5px;
+  border-radius: 5px;
 }
