--- a/client/mean-chat/src/styles.css
+++ b/client/mean-chat/src/styles.css
@@ -1,8 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 body {
   font-family: "Open Sans", sans-serif;
-  background-color: #ecf0f1;
-  color: #333;
+  background-color: rgb(100, 100, 100);
+  /* color: #333; */
   height: 100vh;
   overflow: hidden;
 }
@@ -62,12 +62,11 @@ body {
   overflow: hidden;
   margin: 20px auto;
   padding: 20px;
-  background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h2 {
-  color: #333;
+h2, h3 {
+  color: #FFFFFF;
 }
 
 input {
@@ -84,3 +83,22 @@ label {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+/* styles.scss */
+::-webkit-scrollbar {
+  width: 12px; /* Width of the scrollbar */
+  height: 12px; /* Height of the scrollbar for horizontal scrolling */
+}
+
+::-webkit-scrollbar-track {
+  background: #c0c0c0; /* Background color of the track */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(66, 66, 66); /* Color of the scrollbar thumb */
+  border-radius: 10px; /* Roundness of the scrollbar thumb */
+  border: 3px solid #c0c0c0; /* Adds padding around the thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(66, 66, 66); /* Color when hovering over the thumb */
+}
